--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <body>
     <div id="app" class="container">
       <header>
-        <div class="inner-header">
+        <div class="inner-header flex">
           <div class="logo-bool">
             <img src="image/logo-bool.png" alt="">
           </div>
-          <div class="menu-scelta">
+          <div class="menu-scelta flex">
             <div v-for="(element, index) in scelte" @click="changeTab(index)" :class="selectedTab(index)">
               {{element}}
             </div>
           </div>
-          <div class="search">
+          <div class="search flex">
             <input @keyup.enter="searchAll" type="text" placeholder="cerca film/serie tv per titolo" v-model="query">
-            <div class="btn-search" @click="searchAll">
+            <div class="btn-search flex" @click="searchAll">
               Cerca <i class="fas fa-angle-right"></i>
             </div>
           </div>
@@ -63,7 +63,7 @@
               </strong> {{element.name}}
             </div>
 
-            <div class="valutazione-home mrg-top">
+            <div class="valutazione-home flex mrg-top">
               <strong>Voto:</strong>
               <div class="star-vote">
                 <i class="fas fa-star yellow-star" v-for="yellowStar in element.yellowStar"></i>
@@ -71,7 +71,7 @@
               </div>
             </div>
 
-            <div class="lingua-home mrg-top">
+            <div class="lingua-home flex mrg-top">
               <strong>Lingua originale:</strong>
               <div class="string-box" v-if="!flagVisibility(index, listaTrend)">
                 {{element.original_language}}
@@ -97,7 +97,7 @@
           <title class="title-section flex justify-center">Film in primo piano</title>
 
           <!-- sezione slider homepage film -->
-          <div class="slider-container">
+          <div class="slider-container flex">
 
             <div class="prev" @click="prev(listaFilmHome, listaFilmHomeSlider)">
               <i class="fas fa-angle-left" ></i>
@@ -172,7 +172,7 @@
           <title class="title-section flex justify-center">Serie TV in primo piano</title>
 
           <!-- sezione slider homepage serie tv -->
-          <div class="slider-container">
+          <div class="slider-container flex">
 
             <div class="prev" @click="prev(listaSerieHome, listaSerieHomeSlider)">
               <i class="fas fa-angle-left" ></i>
